Fix mobile user style z-index bug.

--- a/src/bookmarklet/res/simpread_user.css
+++ b/src/bookmarklet/res/simpread_user.css
@@ -8,6 +8,7 @@
 }
 
 sr-rd-crlbar {
+    z-index: 2100000000;
     zoom: .8;
     transition: all 450ms 0ms;
 }
